Stop laser output on rapid moves (#3204)